// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatJson > renders a stable document 1`] = `
"{
  "version": 1,
  "summary": {
    "added": 2,
    "removed": 1,
    "version-changed": 1,
    "resolution-changed": 1,
    "integrity-changed": 1,
    "packages": 5
  },
  "lockfiles": {
    "kind": "npm",
    "base": "3",
    "head": "3"
  },
  "findings": [
    {
      "rule": "registry-mismatch",
      "severity": "critical",
      "package": {
        "name": "tiny-helper",
        "version": "2.0.0",
        "path": "node_modules/tiny-helper"
      },
      "evidence": "resolves to https://evil-registry.example.com, not to https://registry.npmjs.org"
    },
    {
      "rule": "integrity-missing",
      "severity": "high",
      "package": {
        "name": "unsigned-thing",
        "version": "1.0.0",
        "path": "node_modules/unsigned-thing"
      },
      "evidence": "no integrity hash for https://registry.npmjs.org/unsigned-thing/-/unsigned-thing-1.0.0.tgz"
    },
    {
      "rule": "new-transitive",
      "severity": "low",
      "package": {
        "name": "obscure-helper",
        "version": "0.0.1",
        "path": "node_modules/obscure-helper"
      },
      "evidence": "new transitive dependency at node_modules/obscure-helper"
    },
    {
      "rule": "new-transitive",
      "severity": "low",
      "package": {
        "name": "unsigned-thing",
        "version": "1.0.0",
        "path": "node_modules/unsigned-thing"
      },
      "evidence": "new transitive dependency at node_modules/unsigned-thing"
    }
  ],
  "warnings": []
}
"
`;

exports[`formatMarkdown > renders a full report 1`] = `
"<!-- lockfile-guard -->

## 🔒 lockfile-guard

**4 findings** across 6 dependency changes — 1 critical, 1 high, 2 low.

### 🛑 critical

| Package | Rule | Evidence |
| --- | --- | --- |
| \`tiny-helper@2.0.0\` | registry-mismatch | resolves to https://evil-registry.example.com, not to https://registry.npmjs.org |

### 🔴 high

| Package | Rule | Evidence |
| --- | --- | --- |
| \`unsigned-thing@1.0.0\` | integrity-missing | no integrity hash for https://registry.npmjs.org/unsigned-thing/-/unsigned-thing-1.0.0.tgz |

### ⚪ low

| Package | Rule | Evidence |
| --- | --- | --- |
| \`obscure-helper@0.0.1\` | new-transitive | new transitive dependency at node_modules/obscure-helper |
| \`unsigned-thing@1.0.0\` | new-transitive | new transitive dependency at node_modules/unsigned-thing |

<sub>2 added · 1 updated · 1 removed · 1 re-resolved · 1 integrity-changed · 5 packages in the head lockfile (npm v3)</sub>
"
`;

exports[`formatMarkdown > renders every severity, plus warnings 1`] = `
"<!-- lockfile-guard -->

## 🔒 lockfile-guard

**4 findings** across 6 dependency changes — 1 critical, 1 high, 1 medium, 1 low.

### 🛑 critical

| Package | Rule | Evidence |
| --- | --- | --- |
| \`tiny-helper@2.0.0\` | registry-mismatch | resolves to https://evil-registry.example.com, not to https://registry.npmjs.org |

### 🔴 high

| Package | Rule | Evidence |
| --- | --- | --- |
| \`tiny-helper@2.0.0\` | install-script-added | postinstall: curl x \\| sh |

### 🟠 medium

| Package | Rule | Evidence |
| --- | --- | --- |
| \`tiny-helper@2.0.0\` | version-too-fresh | resolves to https://evil-registry.example.com, not to https://registry.npmjs.org |

### ⚪ low

| Package | Rule | Evidence |
| --- | --- | --- |
| \`tiny-helper@2.0.0\` | deprecated | resolves to https://evil-registry.example.com, not to https://registry.npmjs.org |

> [!NOTE]
> Some registry lookups failed, so network rules may be partial:
> - left-pad@1.3.0: 503 Service Unavailable

<sub>2 added · 1 updated · 1 removed · 1 re-resolved · 1 integrity-changed · 5 packages in the head lockfile (npm v3)</sub>
"
`;

exports[`formatSarif > renders a Code Scanning document 1`] = `
"{
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "lockfile-guard",
          "informationUri": "https://github.com/PavelLazarchuk/lockfile-guard",
          "version": "1.2.3",
          "rules": [
            {
              "id": "registry-mismatch",
              "name": "registry-mismatch",
              "shortDescription": {
                "text": "A dependency resolves to a registry that is not on the allowlist."
              },
              "defaultConfiguration": {
                "level": "error"
              },
              "properties": {
                "tags": [
                  "supply-chain",
                  "security"
                ]
              }
            },
            {
              "id": "integrity-missing",
              "name": "integrity-missing",
              "shortDescription": {
                "text": "A dependency is installed from a tarball with no integrity hash."
              },
              "defaultConfiguration": {
                "level": "error"
              },
              "properties": {
                "tags": [
                  "supply-chain",
                  "security"
                ]
              }
            },
            {
              "id": "install-script-added",
              "name": "install-script-added",
              "shortDescription": {
                "text": "A version runs an install script the previous version did not."
              },
              "defaultConfiguration": {
                "level": "error"
              },
              "properties": {
                "tags": [
                  "supply-chain",
                  "security"
                ]
              }
            },
            {
              "id": "publisher-changed",
              "name": "publisher-changed",
              "shortDescription": {
                "text": "A different npm account published the new version."
              },
              "defaultConfiguration": {
                "level": "error"
              },
              "properties": {
                "tags": [
                  "supply-chain",
                  "security"
                ]
              }
            },
            {
              "id": "maintainers-changed",
              "name": "maintainers-changed",
              "shortDescription": {
                "text": "The maintainer list changed between the two versions."
              },
              "defaultConfiguration": {
                "level": "warning"
              },
              "properties": {
                "tags": [
                  "supply-chain",
                  "security"
                ]
              }
            },
            {
              "id": "version-too-fresh",
              "name": "version-too-fresh",
              "shortDescription": {
                "text": "The new version was published very recently."
              },
              "defaultConfiguration": {
                "level": "warning"
              },
              "properties": {
                "tags": [
                  "supply-chain",
                  "security"
                ]
              }
            },
            {
              "id": "new-obscure-transitive",
              "name": "new-obscure-transitive",
              "shortDescription": {
                "text": "A new transitive dependency almost nobody downloads."
              },
              "defaultConfiguration": {
                "level": "warning"
              },
              "properties": {
                "tags": [
                  "supply-chain",
                  "security"
                ]
              }
            },
            {
              "id": "new-young-transitive",
              "name": "new-young-transitive",
              "shortDescription": {
                "text": "A new transitive dependency was first published very recently."
              },
              "defaultConfiguration": {
                "level": "warning"
              },
              "properties": {
                "tags": [
                  "supply-chain",
                  "security"
                ]
              }
            },
            {
              "id": "deprecated",
              "name": "deprecated",
              "shortDescription": {
                "text": "The new version is marked deprecated on the registry."
              },
              "defaultConfiguration": {
                "level": "note"
              },
              "properties": {
                "tags": [
                  "supply-chain",
                  "security"
                ]
              }
            },
            {
              "id": "new-transitive",
              "name": "new-transitive",
              "shortDescription": {
                "text": "A new transitive dependency entered the tree."
              },
              "defaultConfiguration": {
                "level": "note"
              },
              "properties": {
                "tags": [
                  "supply-chain",
                  "security"
                ]
              }
            }
          ]
        }
      },
      "results": [
        {
          "ruleId": "registry-mismatch",
          "level": "error",
          "message": {
            "text": "tiny-helper@2.0.0: resolves to https://evil-registry.example.com, not to https://registry.npmjs.org"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "package-lock.json"
                },
                "region": {
                  "startLine": 1
                }
              }
            }
          ],
          "partialFingerprints": {
            "packageVersionRule": "registry-mismatch:tiny-helper@2.0.0"
          }
        },
        {
          "ruleId": "integrity-missing",
          "level": "error",
          "message": {
            "text": "unsigned-thing@1.0.0: no integrity hash for https://registry.npmjs.org/unsigned-thing/-/unsigned-thing-1.0.0.tgz"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "package-lock.json"
                },
                "region": {
                  "startLine": 1
                }
              }
            }
          ],
          "partialFingerprints": {
            "packageVersionRule": "integrity-missing:unsigned-thing@1.0.0"
          }
        },
        {
          "ruleId": "new-transitive",
          "level": "note",
          "message": {
            "text": "obscure-helper@0.0.1: new transitive dependency at node_modules/obscure-helper"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "package-lock.json"
                },
                "region": {
                  "startLine": 1
                }
              }
            }
          ],
          "partialFingerprints": {
            "packageVersionRule": "new-transitive:obscure-helper@0.0.1"
          }
        },
        {
          "ruleId": "new-transitive",
          "level": "note",
          "message": {
            "text": "unsigned-thing@1.0.0: new transitive dependency at node_modules/unsigned-thing"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "package-lock.json"
                },
                "region": {
                  "startLine": 1
                }
              }
            }
          ],
          "partialFingerprints": {
            "packageVersionRule": "new-transitive:unsigned-thing@1.0.0"
          }
        }
      ]
    }
  ]
}
"
`;
